# datacademy-package

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
datacademy/checker/: __init__.py  animation.py  checker.py  objects.py  request.py
datacademy/database/: __init__.py  connection.py
datacademy/database/m03/: __init__.py  models.py
datacademy/models/: __init__.py  objects.py  request.py  response.py  types.py
datacademy/modules/: __init__.py  checker.py  m02_pcc.py  m03_sql.py  m04_ml.py  m05_api.py  m07_mla.py  m09_final.py  m10.py  m10_final.py  module.py
datacademy/util/: __init__.py  animation.py  types.py
